itdt.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: itdt
spec:
  replicas: 2
  selector:
    matchLabels:
      app: itdt
  template:
    metadata:
      labels:
        app: itdt
    spec:
      containers:
        - name: itdt
          image: ifilyaninitmo/itdt-contained-frontend:master
          ports:
            - containerPort: 3000
