itdt_3.yml
apiVersion: v1
kind: Service
metadata:
  name: lab3
spec:
  type: NodePort
  selector:
    app: lab3
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
